--- a/assets/style.css
+++ b/assets/style.css
@@ -1,32 +1,26 @@
 * {
   box-sizing: border-box;
 }
-
 html {
   font-family: sans-serif;
 }
-
 body {
   margin: 0 auto;
   background: #ccc;
-  background: url("assets/top-image.png") no-repeat top,
-              url("assets/bottom-image.png")no-repeat bottom,
+  background: url("top-image.png") no-repeat top,
+              url("bottom-image.png")no-repeat bottom
 }
-
 article {
   width: 210mm;
   height: 297mm;
   margin: 20px auto;
   position: relative;
-  
 }
-
 address {
   position: absolute;
   bottom: 8mm;
   right: 20mm;
 }
-
 h1 {
   position: absolute;
   top: 12mm;
@@ -39,7 +33,5 @@ h1 {
   padding: 44px 0;
   color: white;
   text-shadow: 1px 1px 1px black;
-  background: url("assets/logo.png");
+  background: url("logo.png");
 }
-
-/* Your CSS below here */
